# pretenst

./: .eslintrc.js  .gitignore  .travis.yml  README.md  deploy-key.enc  deploy-remote.sh  deploy.sh  docker-compose.yml  git-pre-push-hook.sh  install-git-hooks.sh  package-lock.json  package.json  tsconfig.json  tslint.json
client/: .eslintignore  .eslintrc.js  other.d.ts  package-lock.json  package.json  react-three.d.ts  three.d.ts  tsconfig.json  tsconfig.prod.json
client-new/: .eslintrc.js  package.json  react-three.d.ts
client-new/config/: webpack.config.js
client-new/src/: constants.ts  index.css  index.tsx
client/assembly/: index.ts
client/config/: paths.js  webpack.config.js
client/public/: bootstrap.json  eig.wasm  index.html  manifest.json  pretenst-down.html
client/scripts/: blender-import.py  build.js  test.js
client/src/: app-event.ts  app-storage.ts  app.css  app.tsx  constants.ts  control-panel.tsx  eig-wasm.ts  fabric-exports.ts  fabric-kernel.ts  fabric.ts  galapagotch-view.tsx  galapagotchi.tsx  genome-interpreter.ts  genome.ts  gotchi-view.tsx  index.css  index.tsx  island-view.tsx  pretenst.ts  remote-storage.ts  service-worker.ts  start.tsx  tensegrity.tsx
docs/: tenscript.md
eig/: Cargo.toml  index.html
eig/assets/: manifest.json  sw.js
eig/src/: ball.rs  camera.rs  constants.rs  eig.rs  error.rs  example.rs  expression.rs  fabric.rs  fabric_logic.rs  face.rs  graphics.rs  growth.rs  interval.rs  joint.rs  klein.rs  lib.rs  main.rs  mobius.rs  parser.rs  role.rs  scanner.rs  shader.wgsl  sphere.rs  tenscript.rs  test.rs  transforms.rs  twist.rs  view.rs  vulcanize.rs  world.rs
eig/src/app/: app.rs  mod.rs
eig/src/tenscript/: error.rs  examples.ss  expression.rs  mod.rs  output.rs  parser.rs  scanner.rs  sexp.rs
fabric/: index.ts  package-lock.json  package.json  tsconfig.json
fabric-engine/: index.ts  package.json
galapagotchi-client/: .eslintignore  tsconfig.json
galapagotchi-server/: ormconfig.js  package.json
galapagotchi-server/migrations/: 1556901894438-UserIsAdmin.ts
galapagotchi-server/scripts/: seed_db.ts
galapagotchi-server/src/: constants.ts  router.ts  util.ts
server/: .gitignore  Dockerfile  README.md  build.sbt  hexalot.ts  index.ts  ormconfig.js  package.json  process.yml  store.ts  tsconfig.json
server/migrations/: 1555272895481-Initial.ts  1555272895482-PopulateIslands.ts  1555344256454-CreateFirstUser.ts  1555344256454-CreateFirstUsers.ts  1555512586626-TwitterIdentity.ts  (+1 more)
server/src/: auth.ts  (+18 more)
spa/: angular.json  package-lock.json  package.json
src/: app.css  app.tsx  cell-hexagon.tsx  hexagon.tsx  index.tsx  patch-view.tsx  token-view.css  token-view.tsx
(+366 files in other folders)
