[package]
name = "eig"
version = "0.1.0"
authors = ["Gerald de Jong <geralddejong@gmail.com>"]
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.83"
fast_inv_sqrt = "~1.0"
cgmath = "0.18.0"

[lib]
crate-type = ["cdylib", "rlib"]

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
