[package]
name = "eig"
version = "0.1.0"
authors = ["Gerald de Jong <geralddejong@gmail.com>"]
edition = "2021"

[dependencies]
fast_inv_sqrt = "~1.0"
cgmath = "0.18.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
chrono = "0.4.22"
rand = "0.8.5"
wgpu = "0.14.0"
env_logger = "0.10.0"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24"
log = "0.4"
pollster = "0.2"
winit = "0.27.5"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"

[profile.release]
opt-level = 3 # fast and small wasm

[patch.crates-io]

[lib]
crate-type = ["cdylib", "rlib"]

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
